--- a/Inicio.HTML
+++ b/Inicio.HTML
@@ -16,29 +16,30 @@
         <div class="logo">
         <a href="#"><img src="./IMG/Logo ChamanArt.png" alt=""></a>
         </div>
-        <nav class="navbar">
-          <a href="#">Inicio</a>
-          <div class="dropdown">
-            <button class="dropbtn">Obras</button>
-            <div class="dropdown-content">
-              <a href="#">Mosaico</a>
-              <div class="sub-dropdown">
-                <a href="#">Azulejo</a>
-                <a href="#">Papel</a>
-                <a href="#">Tela</a>
-              </div>
-              <a href="#">Pintura</a>
-              <div class="sub-dropdown">
-                <a href="#">Litica</a>
-                <a href="#">Acrilica</a>
-              </div>
-            </div>
-          </div>
-          <a href="#">Acerca de</a>
-          <a href="#">Exposiciones</a>
-          <a href="#">Premios</a>
-          <a href="#">Contacto</a>
-        </nav>        
+        <ul class="nav">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Obras</a>
+            <ul>
+              <li><a href="#">Mosaico</a>
+              <ul>
+                <li><a href="#">Azulejo</a></li>
+                <li><a href="#">Papel</a></li>
+                <li><a href="#">Tela</a></li>
+              </ul>
+              </li>
+              <li><a href="#">Pintura</a>
+                <ul>
+                  <li><a href="#">Litica</a></li>
+                  <li><a href="#">Acrilica</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li><a href="#">Acerca de</a></li>
+          <li><a href="#">Exposiciones</a></li>
+          <li><a href="#">Premios</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>  
               </div>
               <span class="Derechosdeautor">© Chaman Art - 2023</span>
             <div class="Linea"></div>
