--- a/Inicio.HTML
+++ b/Inicio.HTML
@@ -49,6 +49,10 @@
               <span class="Nombrecolectivo"><b>Chamán Art</b></span>
               <span class="Exposiciones"><b>Exposiciones</b></span>
             <div class="Correo"></div>
-            <div class="Instagram"></div>
+            <a href="https://www.instagram.com/chamanartnicaragua/?hl=es" target="_blank">
+              <div class="Instagram"></div>
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100086580385785" target="_blank">
             <div class="Facebook"></div>
+            </a>
     </body>
