--- a/Exposiciones.HTML
+++ b/Exposiciones.HTML
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>ChamanArt</title>
-    <meta name="description" content="Exposiciones" />
+    <meta name="description" content="Talleres" />
     <meta name="author" content="ChamanArt" />
     <link
       href="https://fonts.googleapis.com/css?family=Inter&display=swap"
@@ -17,7 +17,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="./CSS/Exposiciones.css" />
+    <link rel="stylesheet" href="./CSS/Talleres.css" />
     <link
       rel="shortcut icon"
       href="IMG/LOGO CHAMAN BLANCO.png"
@@ -62,14 +62,13 @@
       </nav>
     </header>
     <!-- End Header -->
-
     <section class="hero-image">
-      <img src="./IMG/IMG_4754.JPG" alt="hero image" />
+      <img src="./IMG/PORTADA TALLERES.JPG" alt="hero image" />
     </section>
 
     <section class="container">
       <div class="title">
-        <h1 class="title-expo">Exposiciones</h1>
+        <h1 class="title-expo">Talleres</h1>
       </div>
 
       <div class="card-group">
@@ -78,12 +77,14 @@
           <div class="col-text">
             <div class="card-body">
               <h5 class="card-title">
-                Exposición en el V congreso Día del Diseñador Gráfico
+                De Sandino a Carlos Fonseca
               </h5>
               <p class="card-text">
-                FAREM-Estelí nos dio el honor de exhibir nuestras obras en el V
-                congreso del día del diseñador gráfico en donde compartimos
-                experiencias con personas creativas.
+                Talleres de creación Artística con 
+                estudiantes de Diseño Gráfico y 
+                Arquitectura, como resultado del taller 
+                los estudiantes crearon retratos de 
+                Sandino y Carlos Fonseca. 
               </p>
             </div>
             <div class="card-footer">
@@ -91,11 +92,11 @@
               <hr />
               <div class="text-footer">
                 <img src="./IMG/clock_4.png" alt="clock" />
-                <p>mayo 13, 2023 . FAREM-Chontales</p>
+                <p>Junio 6 al 9, 2023</p>
               </div>
               <div class="btn">
                 <a
-                  href="https://m.facebook.com/story.php?story_fbid=pfbid02jt7EaLLdWdFjLDuUAA16ZQZWsQPXPFeH9iWzEXpDwHu27ERQH3Zc35pn2iEfppobl&id=100086580385785&mibextid=CDWPTG"
+                  href="https://m.facebook.com/story.php?story_fbid=pfbid022DBWLW8xoUUgViiveX4YgffMDrkXCgpVH11WN43Ziv4nFrdgDUPspmsGxzaybVril&id=100086580385785&sfnsn=wa&mibextid=RUbZ1f"
                   target="_blank">
                   Ver más
                 </a>
@@ -104,7 +105,7 @@
           </div>
           <div class="col-image">
             <img
-              src="./IMG/fb_img_1666389334522_5.png"
+              src="./IMG/DE SANDINO.png"
               class="img-fluid"
               alt="imagen de chaman" />
           </div>
@@ -113,16 +114,18 @@
         <div class="card">
           <div class="col-image">
             <img
-              src="./IMG/ND Resort 2023.png"
+              src="./IMG/Talleristas.png"
               class="img-fluid"
               alt="imagen de chaman" />
           </div>
           <div class="col-text">
             <div class="card-body">
-              <h5 class="card-title">ND Resort 2023</h5>
+              <h5 class="card-title">Talleristas en el V congreso del dia del Diseñador Gráfico</h5>
               <p class="card-text">
-                Proyectamos nuestra creatividad en la tercera edición de ND
-                Resort 2023
+                Diseñadores Gráficos conocieron sobre la 
+                técnica collage, mosaico y como ellos 
+                pueden implementar estas técnicas en sus 
+                diseños visuales.
               </p>
             </div>
             <div class="card-footer">
@@ -130,11 +133,11 @@
               <hr />
               <div class="text-footer">
                 <img src="./IMG/clock_4.png" alt="clock" />
-                <p>abril 15, 2023 . San Juan del Sur</p>
+                <p>mayo 12, 2023</p>
               </div>
               <div class="btn">
                 <a
-                  href="https://www.facebook.com/permalink.php?story_fbid=188113300751348&id=100086580385785&ref=embed_post"
+                  href="https://m.facebook.com/story.php?story_fbid=pfbid0gU7ZdXjzrBsCQaw88hwpA3gz2rPoooJXDnzyKu2ysyfVyv1wqVemo6bxVQHfop9Sl&id=100086580385785&sfnsn=wa&mibextid=RUbZ1f"
                   target="_blank">
                   Ver más
                 </a>
@@ -148,12 +151,15 @@
         <div class="col-text">
           <div class="card-body">
             <h5 class="card-title">
-              Exposición colectiva Nicaragua Diseña 2023
+              Conciencia ecología por medio del arte 
             </h5>
             <p class="card-text">
-              Con orgullo participamos en IV Festival
-              internacional de las artes en honor a
-              Rubén Darío.
+              Compartimos con estudiantes de Medicina, 
+              Odontología y veterinaria de la universidad UNFLEP, 
+              las diferentes técnicas de arte 
+              mosaico con materiales reutilizables y la 
+              importancia de este arte para la promoción de 
+              conciencia Ecológica
             </p>
           </div>
           <div class="card-footer">
@@ -161,11 +167,11 @@
             <hr />
             <div class="text-footer">
               <img src="./IMG/clock_4.png" alt="clock" />
-              <p>febrero 7, 2023  .  Juigalpa</p>
+              <p>diciembre 8, 2022</p>
             </div>
             <div class="btn">
               <a
-                href="https://m.facebook.com/story.php?story_fbid=pfbid02jt7EaLLdWdFjLDuUAA16ZQZWsQPXPFeH9iWzEXpDwHu27ERQH3Zc35pn2iEfppobl&id=100086580385785&mibextid=CDWPTG"
+                href="https://m.facebook.com/story.php?story_fbid=pfbid09QhAGXPXPcoLQzHYChGKEAtCGCDLwgpBjNJ1eRJiaqnDKwTSiwokVR4eaYJgbazVl&id=100086580385785&sfnsn=wa&mibextid=RUbZ1f"
                 target="_blank">
                 Ver más
               </a>
@@ -174,7 +180,7 @@
         </div>
         <div class="col-image">
           <img
-            src="./IMG/Ruben Dario.jpg"
+            src="./IMG/Conciencia.png"
             class="img-fluid"
             alt="imagen de chaman" />
         </div>
@@ -183,17 +189,21 @@
       <div class="card">
         <div class="col-image">
           <img
-            src="./IMG/Exposicion colectiva 2023.png"
+            src="./IMG/Expo.png"
             class="img-fluid"
             alt="imagen de chaman" />
         </div>
         <div class="col-text">
           <div class="card-body">
-            <h5 class="card-title">Exposición colectiva Regional 2023</h5>
+            <h5 class="card-title">Expo Nicaragua Diseña 2022</h5>
             <p class="card-text">
-              Tuvimos el privilegio de participar en
-              una exposición colectiva, donde muchos artistas Estelianos se unieron para
-              compartir su talento.
+              Hermoso taller con estudiantes del 
+              centro de estudios secundaria INFLE  y Alumnos 
+              de la Escuela Normal Estelí, Realizándonos 
+              introducción al arte Mosaico y Collage 
+              donde los participantes tuvieron también la 
+              oportunidad de apreciar una pequeña expo 
+              de nuestro trabajo.
             </p>
           </div>
           <div class="card-footer">
@@ -201,11 +211,11 @@
             <hr />
             <div class="text-footer">
               <img src="./IMG/clock_4.png" alt="clock" />
-              <p>febrero 10, 2023  .  Casa de Cultura Estelí</p>
+              <p>diciembre 6, 2022</p>
             </div>
             <div class="btn">
               <a
-                href="https://www.facebook.com/permalink.php?story_fbid=pfbid02uZ7zuuh6DxKjdgNguxnfVXhfz3xGuDjzpZJjPPeR77voRMjjifP54Ma3QQuioAL3l&id=100086580385785"
+                href="https://m.facebook.com/story.php?story_fbid=pfbid0K1LWRXGoHny5oTmAodv5Rv84WtxqUXPQeg2mUCwRGXU8AJmTSkHrcJyRDqM3JM8Vl&id=100086580385785&sfnsn=wa&mibextid=RUbZ1f"
                 target="_blank">
                 Ver más
               </a>
@@ -214,119 +224,6 @@
         </div>
       </div>
     </div>
-
-    <div class="card">
-      <div class="col-text">
-        <div class="card-body">
-          <h5 class="card-title">
-            Expo EsArte 2022
-          </h5>
-          <p class="card-text">
-            Presentes en la Expo feria de la II edición 
-            de ESARTE en donde compartimos una 
-            muestra de nuestra creatividad y nuestro 
-            inmenso amor por el arte 
-          </p>
-        </div>
-        <div class="card-footer">
-          <br />
-          <hr />
-          <div class="text-footer">
-            <img src="./IMG/clock_4.png" alt="clock" />
-            <p>Noviembre 25 y 26 , 2022  .   Plaza Domingo Gadea</p>
-          </div>
-          <div class="btn">
-            <a
-              href="https://www.facebook.com/permalink.php?story_fbid=pfbid0vk9GKDapPThaoD8KkDFGpUPFALBDn7JiFCQYxaB6AuhXKtTK9PtsJcVkPc23htc5l&id=100086580385785"
-              target="_blank">
-              Ver más
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-image">
-        <img
-          src="./IMG/EXPOESARTE.png"
-          class="img-fluid"
-          alt="imagen de chaman" />
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="col-image">
-        <img
-          src="./IMG/Exposicion Colectiva 2022.png"
-          class="img-fluid"
-          alt="imagen de chaman" />
-      </div>
-      <div class="col-text">
-        <div class="card-body">
-          <h5 class="card-title">Exposición colectiva 2022</h5>
-          <p class="card-text">
-            Movimiento Cultural Leonel 
-            Rugama nos dio la oportunidad 
-            de ser parte de una expo colectiva 
-            en donde compartimos nuestra 
-            pasión y talento artístico con otros 
-            amantes del arte.
-          </p>
-        </div>
-        <div class="card-footer">
-          <br />
-          <hr />
-          <div class="text-footer">
-            <img src="./IMG/clock_4.png" alt="clock" />
-            <p>noviembre 5, 2022  .   Puerto Salvador Allende</p>
-          </div>
-          <div class="btn">
-            <a
-              href="https://www.facebook.com/permalink.php?story_fbid=pfbid02wuk4oSs9cgfZkEtXvUbM1pKRjZZp7LRD1Bn1osJHfZ7RuP11GyNEzNSZzenVsYfVl&id=100086580385785"
-              target="_blank">
-              Ver más
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="col-text">
-      <div class="card-body">
-        <h5 class="card-title">
-          Expo Nicaragua Diseña 2022
-        </h5>
-        <p class="card-text">
-          Participación en la Expo ND, un evento
-          que nos brindó la oportunidad de 
-          exhibir una amplia variedad de técnicas 
-          artísticas innovadoras.
-        </p>
-      </div>
-      <div class="card-footer">
-        <br />
-        <hr />
-        <div class="text-footer">
-          <img src="./IMG/clock_4.png" alt="clock" />
-          <p>octubre 21 al 23, 2022  .  Centro de Convenciones Olof Palme</p>
-        </div>
-        <div class="btn">
-          <a
-            href="https://m.facebook.com/story.php?story_fbid=pfbid0352n4JsqC4nKFxQ3iyBacRFzwP352jMQj5CQx566228BBJscBECpb9nb9BpLQs8JPl&id=100086580385785&sfnsn=wa&mibextid=RUbZ1f"
-            target="_blank">
-            Ver más
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-image">
-      <img
-        src="./IMG/EXPONICADISEÑA.png"
-        class="img-fluid"
-        alt="imagen de chaman" />
-    </div>
-  </div>
-    </section>
 
     <footer>
       <ul>
@@ -354,4 +251,3 @@
       <p>© Chaman Art - 2023</p>
     </footer>
   </body>
-</html>
